--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "grouproject",
+  "name": "typescript-boilerplate",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,28 +7,21 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node-dev src/index.ts"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/WildCodeSchool/2209-wns-rivest-groupe1-back.git"
-  },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/WildCodeSchool/2209-wns-rivest-groupe1-back/issues"
-  },
-  "homepage": "https://github.com/WildCodeSchool/2209-wns-rivest-groupe1-back#readme",
   "dependencies": {
     "apollo-server": "^3.10.3",
     "argon2": "^0.30.1",
     "dotenv": "^16.0.3",
-    "class-validator": "^0.13.2",
-    "graphql": "^15.8.0",
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^8.8.0",
+    "prettier": "^2.7.1",
+    "ts-node-dev": "^2.0.0",
     "type-graphql": "^1.1.1",
-    "typeorm": "^0.3.10",
-    "pg": "^8.8.0"
+    "typeorm": "^0.3.9"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.12",
+    "@types/jsonwebtoken": "^8.5.9",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
@@ -36,7 +29,6 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.5",
     "eslint-plugin-promise": "^6.0.1",
-    "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.2"
   }
 }
