feat(models): Add final models + update docker-compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,16 @@ services:
       db:
         condition: service_healthy
 
+  frontend:
+    build: ./front
+    volumes:
+      - ./front/src:/app/src
+    ports:
+      - 3000:3000
+    depends_on:
+      backend:
+        condition: service_healthy
+
   adminer:
     image: adminer
     restart: always
